--- a/src/modal/index.css
+++ b/src/modal/index.css
@@ -20,6 +20,7 @@
     border: 1px solid #888;
     border-radius: 25px; /* rounded corners */
     width: max-content; /* Could be more or less, depending on screen size */
+    height: max-content;
 }
 
 /* The Close Button */
