--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,16 @@
   margin: auto;
 
 }
+
+.Nav {
+  width: 70%;
+
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  margin: auto;
+
+}
