--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Lyon Text",Georgia,Times,serif;
+  font-size: 18px;
+  line-height: 1.25;
+  background-color: gainsboro;
 }
